--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        <span class="site-footer-credits">© 2023 xp-repo.github.io/blog 版权所有 </span>
+        <span class="site-footer-credits">© 2023 <a href="https://xp-repo.github.io/blog">xp-repo.github.io/blog</a> 版权所有 </span>
       </footer>
     </main>
   </body>
